Route rework for delete
